fixed twentyfifteen out of the box theming, module mRespond.. needs work, but looks decent.

--- a/themes/mountainsunset/css/css.css
+++ b/themes/mountainsunset/css/css.css
@@ -22,7 +22,8 @@
  * Config saved to config.json and https://gist.github.com/342a3b2f8d9eccbe7902
  */
 /*! normalize.css v3.0.2 | MIT License | git.io/normalize */
-
+#vrp .hide { display:none; }
+#vrp .show { display:block; }
 #vrp article,
 #vrp aside,
 #vrp details,
@@ -1214,7 +1215,7 @@
     width: 200px;
 }
 
-
+#vrp a.vrp-btn { text-decoration:none !important;}
 #vrp .vrp-btn {
     /*display: inline-block;*/
     /*position: relative;*/
@@ -1239,26 +1240,6 @@
     filter:progid:DXImageTransform.Microsoft.dropshadow(OffX=0,OffY=2,Color=#33000000,Positive=true);
     padding:10px;
 }
-#vrp .vrp-btn.vrp-stylized {
-    padding:0px 30px 0px 70px;
-    line-height: 40px;
-}
-#vrp .vrp-btn .vrp-icon {
-    position: absolute;
-    left: 0;
-    width: 50px;
-    text-align:center;
-    background-color:rgba(0,0,0,0.5);
-    padding:7px 5px;
-    line-height: 0px;
-    -webkit-border-top-left-radius: 5px;
-    -webkit-border-bottom-left-radius: 5px;
-    -moz-border-radius-topleft: 5px;
-    -moz-border-radius-bottomleft: 5px;
-    border-top-left-radius: 5px;
-    border-bottom-left-radius: 5px;
-    border-right: 1px solid  rgba(0,0,0,0.15);
-}
 
 #vrp .vrp-btn:hover span, #vrp .vrp-btn.active span {
     background-color:#111;
@@ -1275,30 +1256,30 @@
     -ms-filter:"progid:DXImageTransform.Microsoft.dropshadow(OffX=0,OffY=1,Color=#ccffffff,Positive=true)";
     filter:progid:DXImageTransform.Microsoft.dropshadow(OffX=0,OffY=1,Color=#ccffffff,Positive=true);
 }
-.vrp-epink, .vrp-kiwi, .vrp-orange, .vrp-purple, .vrp-turqoise, .vrp-red {
+.vrp-epink, .vrp-kiwi, .vrp-orange, .vrp-purple, .vrp-turquoise, .vrp-red {
     padding:3px 5px;
     color:#fff;
 }
 #vrp .vrp-btn.epink, .vrp-epink {
-    background:#ba4581;
+    background:#ba4581 !important;
 }
 #vrp .vrp-btn.kiwi, .vrp-kiwi {
-    background:#45ba63;
+    background:#45ba63 !important;
 }
 #vrp .vrp-btn.orange, .vrp-orange {
-    background: #FF7F00;
+    background: #FF7F00 !important;
 }
 
 #vrp .vrp-btn.purple, .vrp-purple {
-    background: #8e44ad;
+    background: #8e44ad !important;
 }
 
 #vrp .vrp-btn.turquoise, .vrp-turqoise {
-    background: #1abc9c;
+    background: #1abc9c !important;
 }
 
 #vrp .vrp-btn.red, .vrp-red {
-    background: #e74c3c;
+    background: #e74c3c !important;
 }
 
 
@@ -1681,11 +1662,12 @@ animated buttons - animate the text inside prev and next buttons
     background:rgba(0,0,0,0.5);
     padding:5px 10px;
 }
-.vrp-actions a { margin:.75em 2.8em .75em 3.2em; display:block !important;}
-.vrp-actions a:first-child { margin-top:3em!important;}
+.vrp-actions a { margin:0!important; display:block !important;}
+.vrp-actions a:first-child { margin-top:1.75em!important;}
 .vpr-meta-wrapper {
     margin-right:1em;
 }
+.vrp-layout-action { margin-top:0.75em; }
 /**********************************
  ********** OTHER STYLING **********
  **********************************/
